k8s_skywalking/order.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  labels:
    app: order-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
      - name: order-service
        image: registry.cn-qingdao.aliyuncs.com/my_spring_demo/order-service
        imagePullPolicy: Always
        ports:
        - containerPort: 8020
          name: web
        lifecycle:
          preStop:
            exec:
              command: ["/bin/sh","-c","curl -X PUT http://eureka.default.svc.cluster.local:8888/eureka/apps/ORDER-SERVICE/${MY_POD_NAME}:order-service:8020/status?value=OUT_OF_SERVICE"]
        volumeMounts:
          - name: sidecar
            mountPath: /sidecar
      volumes:
        - name: sidecar
          emptyDir: {}
