k8s_skywalking/eureka.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: eureka
spec:
  selector:
    matchLabels:
      app: eureka
  serviceName: eureka-headless
  replicas: 3
  template:
    metadata:
      labels:
        app: eureka
    spec:
      containers:
      - name: eureka
        image: registry.cn-qingdao.aliyuncs.com/my_spring_demo/eureka-service
        imagePullPolicy: Always
        ports:
        - containerPort: 8888
          name: web
        readinessProbe:
          tcpSocket:
            port: 8888
          initialDelaySeconds: 60
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 8888
          initialDelaySeconds: 60
          periodSeconds: 10
        volumeMounts:
          - name: sidecar
            mountPath: /sidecar
      volumes:
        - name: sidecar
          emptyDir: {}
          
---
apiVersion: v1
kind: Service
metadata:
  name: eureka-headless
spec:
  clusterIP: None
  ports:
  - port: 8888
    name: eureka
  selector:
    app: eureka
---
apiVersion: v1
kind: Service
metadata:
  name: eureka
spec:
  ports:
  - port: 8888
    name: eureka
  selector:
    app: eureka
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eureka 
spec:
  rules:
    - host: eureka.k8s.local
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service: 
              name: eureka
              port: 
                number: 8888
